# ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
frameworks/langgraph/basics/: 00_why_langgraph.md  01_state_node_graph.ipynb  02_messages_and_streaming.ipynb  03_wiring_nodes.ipynb  04_loops_and_routing.ipynb  05_tools_overview.ipynb  06_message_types.ipynb
frameworks/langgraph/patterns/: 01_reflection.ipynb  02_plan_and_execute.ipynb  03_code_fixing_agent.ipynb
frameworks/langgraph/projects/: 01_basic_chatbot.ipynb  02_tool_calling_web_search.ipynb  03_state_todo_manager.ipynb  04_structured_output.ipynb  05_english_tutor_chatbot.ipynb
notes/: notebook_vs_python_script.md
