[project]
name = "ai-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=4.0.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
